--- a/data/figures.yml
+++ b/data/figures.yml
@@ -1079,7 +1079,7 @@ figure_list:
   - id: "22.1"
     src: fig-22-1-van-aubel.jpg
     caption: >
-      Components from Ray Staakman’s kinetic works, before treatment. This metal spring, two electric motors that move each other in the opposite direction when switched on, and a worn-down gear were not, and are not, robust enough to support the stresses generated during movement. Rijksdienst voor het Cultureel Erfgoed.
+      Components from Ray Staakman’s kinetic works, before treatment. The metal spring (left), two electric motors that move each other in the opposite direction when switched on (middle), and a worn-down gear (right) were not, and are not, robust enough to support the stresses generated during movement. Rijksdienst voor het Cultureel Erfgoed.
     credit: >
       © Ray Staakman
 
