--- a/data/publication.yml
+++ b/data/publication.yml
@@ -91,7 +91,7 @@ license:
   link_relation: license
   url: http://creativecommons.org/licenses/by/4.0/
   icon: cc-by.png
-  scope: text-only # full | text-only | some-exceptions
+  scope: # full | text-only | some-exceptions
   exceptions:
     online:
     pdf_ebook:
