Photo credit for 13.2
replaced / with .

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -496,14 +496,14 @@ figure_list:
     caption: >
       Examples of slides from Aleksandar Srnec’s *Luminoplastic 1*, 1965–67.
     credit: >
-      Museum of Contemporary Art, Zagreb. Photo: © Kreso Vlahek.
+      Photo: © Kreso Vlahek.
 
   - id: "8.4b"
     src: fig-8-4b-pavic.jpg
     caption: >
       Examples of slides from Aleksandar Srnec’s *Luminoplastic 1*, 1965–67.
     credit: >
-      Museum of Contemporary Art, Zagreb. Photo: © Kreso Vlahek.
+      Photo: © Kreso Vlahek.
 
   - id: "8.5a"
     src: fig-8-5a-pavic.jpg
@@ -879,7 +879,7 @@ figure_list:
     caption: >
       Julio Le Parc’s space at the Venice Biennale, 1966. The priest trying on Le Parc’s eyeglasses may give an idea of the wider audiences artists hope to reach through art multiples. Denise René Archive.
     credit: >
-      © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris / Photo: © Andre Morain, Paris.
+      © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris. Photo: © Andre Morain, Paris.
 
   - id: "13.3"
     src: fig-13-3-plante.jpg
