--- a/data/figures.yml
+++ b/data/figures.yml
@@ -900,7 +900,7 @@ figure_list:
     caption: >
       <em>Multiples</em> by Hugo Demarco, featured in the Galerie Denise René exhibition <em>Demarco: Dynamique de l’image</em> (April–May 1968) and the accompanying catalogue. The Parisian gallery supported the production of multiples and reserved a section for them in its exhibition catalogues.
     credit: >
-      From *Demarco: Dynamique de l’image, Galerie Denise René, Paris . . . avril–mai 1968*. Paris: Galerie Denise René; Société Mondial d’Impression, 1968. Reproduced with permission / © Hugo Demarco
+      From *Demarco: Dynamique de l’image, Galerie Denise René, Paris . . . avril–mai 1968*. Paris: Galerie Denise René; Société Mondial d’Impression, 1968. Reproduced with permission. © Hugo Demarco.
 
   - id: "13.6"
     src: fig-13-6-plante.jpg
