--- a/data/figures.yml
+++ b/data/figures.yml
@@ -459,7 +459,7 @@ figure_list:
     caption: >
       Operation of Takis’s *Ballet Magnetique*, 1961, after conservation treatment. The Menil Collection, Houston.
     credit: >
-      © Takis Foundation. Video capture: The Menil Collection, Houston, Adam Baker
+      © Takis Foundation. Video capture: The Menil Collection, Houston, Adam Baker.
 
   - id: "7.11"
     src: fig-7-11-stephenson.jpg
