--- a/data/figures.yml
+++ b/data/figures.yml
@@ -25,7 +25,7 @@ figure_list:
     caption: >
       *Kinetic Construction* (*Standing Wave*), 1919–20, by Naum Gabo (1890–1977); replica 1985.
     credit: >
-      The Work of Naum Gabo © Nina & Graham Williams. Photo: © Tate, London 2016.
+      The Work of Naum Gabo © Nina & Graham Williams. Photos: © Tate, London 2016.
 
   - id: "1.2"
     src: fig-1-2-bek.jpg
