--- a/data/figures.yml
+++ b/data/figures.yml
@@ -118,7 +118,7 @@ figure_list:
     caption: >
       A screwdriver cannot be used as an ashtray.
     credit: >
-      Photo: Tiziana Caianiello
+      Photo: Tiziana Caianiello.
 
   - id: "2.2"
     src: fig-2-2-caianiello.jpg
