Open external links in new windows

--- a/config.yml
+++ b/config.yml
@@ -21,6 +21,7 @@ metaDataFormat: "yaml"
 
 blackfriday:
   fractions: false
+  hrefTargetBlank: true
 
 # These values can be accessed in templates via .Site.Params
 params:
