Remove ™ and ® symbols

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -279,7 +279,7 @@ figure_list:
   - id: "4.6"
     src: fig-4-6-snow.jpg
     caption: >
-      FLIR ONE™ thermal image of the horizontal projector.
+      FLIR ONE thermal image of the horizontal projector.
     credit: >
       Photo: Yale University Art Gallery.
 
