Final text changes

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -3,14 +3,14 @@ figure_list:
   - id: "𝙸.1"
     src: fig-i-1-ratti.jpg
     caption: >
-      Gianni Colombo, *Strutturazione pulsante*, 1959, polystyrene foam, wooden structure, metal, rubber foam, and electrical micromotor. The artwork is turned on for one minute every thirty minutes from 10 a.m. Museo del Novecento (long-term loan of the artist).
+      Gianni Colombo, *Strutturazione pulsante*, 1959, polystyrene foam, wooden structure, metal, rubber foam, and electrical micromotor. The artwork is turned on for one minute every thirty minutes from 10 a.m. Museo del Novecento (long-term loan by the artist).
     credit: >
       Archivio Gianni Colombo, Milan. Museo del Novecento, Milan © Comune di Milano. All rights reserved.
 
   - id: "𝙸.2"
     src: fig-i-2-ratti.jpg
     caption: >
-      Giovanni Anceschi, *Struttura tricroma*, 1964, four cube-shaped elements in wood and metal, inbuilt screen, back projection with additive color synthesis, and four 220V electromechanical motors. Museo del Novecento (long-term loan of the artist, Milan).
+      Giovanni Anceschi, *Struttura tricroma*, 1964, four cube-shaped elements in wood and metal, inbuilt screen, back projection with additive color synthesis, and four 220V electromechanical motors. Museo del Novecento (long-term loan by the artist).
     credit: >
       © Giovanni Anceschi. Museo del Novecento, Milan © Comune di Milano. All rights reserved.
 
@@ -997,7 +997,7 @@ figure_list:
     caption: >
       Len Lye’s *Loop*, ca. 1964, after its 2016 restoration. The Art Institute of Chicago, Barbara Neff Smith and Solomon Byron Smith Purchase Fund.
     credit: >
-      © Len Lye Foundation Collection.
+      Len Lye Foundation Collection.
 
   - id: "15.5"
     src: t_Or2bTzcbg
