Copyright pages fixes

--- a/data/publication.yml
+++ b/data/publication.yml
@@ -74,11 +74,11 @@ subject_metadata:
 
 library_of_congress_cip_data:
   - "Names: Rivenc, Rachel, editor. | Bek, Reinhard, editor. | Getty Conservation Institute, issuing body, organizer. | ICOM Committee for Conservation. Working Group Modern Materials and Contemporary Art, organizer. | Museo del Novecento (Milan, Italy), organizer. | Palazzo reale di Milano, host institution."
-  - "Title: Keep it moving? : conserving kinetic art : proceedings from the meeting organized by the Getty Conservation Institute, the ICOM-CC Modern Materials and Contemporary Art Working Group, and Museo del Novecento, Palazzo Reale, Milan, Italy, June 30-July 2, 2016 / Rachel Rivenc and Reinhard Bek, editors."
+  - "Title: Keep it moving? : conserving kinetic art : proceedings from the meeting organized by the Getty Conservation Institute, the ICOM-CC Modern Materials and Contemporary Art Working Group, and Museo del Novecento, Palazzo Reale, Milan, Italy, June 30–July 2, 2016 / Rachel Rivenc and Reinhard Bek, editors."
   - "Other titles: Conserving kinetic art"
   - "Description: Los Angeles, CA : Getty Conservation Institute, [2017] | Includes bibliographical references."
-  - "Identifiers: LCCN 2017029127 (print) | LCCN 2017034944 (ebook) | ISBN 9781606065389 (epub) | ISBN 9781606065365 (online) | ISBN 9781606065372 (pbk.)"
-  - "Subjects:  LCSH: Kinetic art--Conservation and restoration--Congresses."
+  - "Identifiers: LCCN 2017029127 (print) | LCCN 2017034944 (ebook) | ISBN 9781606065372 (epub) | ISBN 9781606065365 (online) | ISBN 9781606065389 (pbk.)"
+  - "Subjects:  LCSH: Kinetic art—Conservation and restoration—Congresses."
   - "Classification: LCC N6494.K5 (ebook) | LCC N6494.K5 K44 2017 (print) | DDC 709.04/07--dc23"
   - "LC record available at <a href=\"https://lccn.loc.gov/2017029127\" target=\"_blank\">https://lccn.loc.gov/2017029127</a>"
 
