--- a/data/figures.yml
+++ b/data/figures.yml
@@ -528,7 +528,7 @@ figure_list:
     caption: >
       Analogue projection of Aleksandar Srnec’s *Luminoplastic 1*, 1965–67.
     credit: >
-      Museum of Contemporary Art, Zagreb.
+      Video: Museum of Contemporary Art, Zagreb.
 
   - id: "8.7"
     src: fig-8-7-pavic.jpg
@@ -586,7 +586,7 @@ figure_list:
     caption: >
       Comparison of the analogue and digital projections.
     credit: >
-      Museum of Contemporary Art, Zagreb.
+      Video: Museum of Contemporary Art, Zagreb.
 
   - id: "9.1"
     src: zNr9YISTQfw
