--- a/data/publication.yml
+++ b/data/publication.yml
@@ -132,23 +132,23 @@ formats:
   - name: EPUB
     media_type: application/epub+zip
     link_relation: alternate
-    url: http://www.getty.edu/publications/keepitmoving/downloads/KeepItMoving.epub
+    url: http://www.getty.edu/publications/keepitmoving/downloads/RivencBek_KeepItMoving.epub
     identifier: 978-1-60606-537-2
     note:
     icon: download-icon
   - name: MOBI/KINDLE
     media_type: application/mobi
     link_relation: alternate
-    url: http://www.getty.edu/publications/keepitmoving/downloads/KeepItMoving.mobi
+    url: http://www.getty.edu/publications/keepitmoving/downloads/RivencBek_KeepItMoving.mobi
     identifier: 978-1-60606-537-2
     note:
     icon:
   - name: PDF
     media_type: application/pdf
     link_relation: alternate
-    url: http://www.getty.edu/publications/keepitmoving/downloads/KeepItMoving.pdf
+    url: http://www.getty.edu/publications/keepitmoving/downloads/RivencBek_KeepItMoving.pdf
     identifier: 978-1-60606-538-9
-    note:
+    note: 6.1 MB
     icon:
   - name: Paperback
     media_type: print
