Remove special character from image filenames

--- a/data/figures.yml
+++ b/data/figures.yml
@@ -926,42 +926,42 @@ figure_list:
       Courtesy of Archivos Di Tella, Universidad Torcuato Di Tella. © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris.
 
   - id: "14.1"
-    src: fig-14-1-d’haenens.jpg
+    src: fig-14-1-dhaenens.jpg
     caption: >
       View of Nicolas Schöffer’s studio in the Villa des Arts, Paris.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris, with kind authorization of Mrs. Schöffer.
 
   - id: "14.2a"
-    src: fig-14-2a-d’haenens.jpg
+    src: fig-14-2a-dhaenens.jpg
     caption: >
       Spatiodynamism as seen in Schöffer’s *Spationynamique 16* with Maurice Béjart, 1953.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris, with kind authorization of Mrs. Schöffer.
 
   - id: "14.2b"
-    src: fig-14-2b-d’haenens.jpg
+    src: fig-14-2b-dhaenens.jpg
     caption: >
       Luminodynamism as seen in Schöffer’s *Lux 2*, 1957.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris, with kind authorization of Mrs. Schöffer.
 
   - id: "14.2c"
-    src: fig-14-2c-d’haenens.jpg
+    src: fig-14-2c-dhaenens.jpg
     caption: >
       Chronodynamism as seen in Schöffer’s *Chronos 10*, 1969.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris, with kind authorization of Mrs. Schöffer.
 
   - id: "14.3"
-    src: fig-14-3-d’haenens.jpg
+    src: fig-14-3-dhaenens.jpg
     caption: >
       Nicolas Schöffer’s *Musiscope*, 1960.
     credit: >
       © 2017 Artists Rights Society (ARS), New York / ADAGP, Paris, with kind authorization of Mrs. Schöffer.
 
   - id: "14.4"
-    src: fig-14-4-d’haenens.jpg
+    src: fig-14-4-dhaenens.jpg
     caption: >
       Details of the structure of Nicolas Schöffer’s *Musiscope*, 1960.
     credit: >
