--- a/config.yml
+++ b/config.yml
@@ -19,6 +19,12 @@ theme: "quire-prototype-starter-theme"
 footnoteReturnLinkContents: "↩"
 metaDataFormat: "yaml"
 
+disableKinds:
+  - "home"
+  - "section"
+  - "taxonomy"
+  - "taxonomyTerm"
+
 blackfriday:
   fractions: false
   hrefTargetBlank: true
