--- a/data/publication.yml
+++ b/data/publication.yml
@@ -49,7 +49,7 @@ secondary_contributor:
 
 contributor_as_it_appears: Rachel Rivenc and Reinhard Bek, Editors
 
-marketing_graphic:
+cover_graphic: cover_graphic.jpg
 
 description:
   one_line:
